Ok I fixed the card alignment with the text above on the left and the text below in the whitespace.

--- a/docroot/themes/custom/ucsf/scss/views/_view-topic-tag-featured-carousel.scss
+++ b/docroot/themes/custom/ucsf/scss/views/_view-topic-tag-featured-carousel.scss
@@ -105,11 +105,15 @@
 
   .topic-card span {
     padding: 16px 0;
+
+    @include breakpoint($new-x-small-max) {
+      padding: 16px 11px;
+    }
   }
 
   @include breakpoint($new-x-small-max) {
     .slick-track {
-      left: -25px;
+      left: -10px;
     }
 
     .slick-slide {
